Fixed domain_programs page. Added scrollbar

--- a/static/css/university.css
+++ b/static/css/university.css
@@ -48,13 +48,6 @@ li a:hover {
 
 .main_image
 {
-
-  /*margin:5%;
-  position: relative;
-  left: 1050px;
-  top: -570px;
-  width: 200px;
-  height: 200px;*/
   position: absolute;
   right: 1%;
   bottom: 20%;
